--- a/shared-notes-software/src/App.css
+++ b/shared-notes-software/src/App.css
@@ -1,3 +1,6 @@
+body{
+  background-color: #F2F3F5;
+}
 /* ---------------------------------CUSTOM SCROLL BAR--------------------------------- */
 ::-webkit-scrollbar {
   width: 5px;
