custonm navbar added with logo

--- a/shared-notes-software/src/App.css
+++ b/shared-notes-software/src/App.css
@@ -1,5 +1,6 @@
 body{
   background-color: #F2F3F5;
+  overflow: hidden;
 }
 /* ---------------------------------CUSTOM SCROLL BAR--------------------------------- */
 ::-webkit-scrollbar {
